# sammati

./: .gitignore  Cargo.toml  README.md
docs/: AA_2_0_0.yaml  FIP_2_0_0.yaml  FIP_experimental_spec.json  FIU_2_0_0.yaml  aa-certification-test-scenarios.md  aa-consent-templates.csv  aa-prior-art.md  background.md  fi_assets_liabilitie.txt  fip-certification-test-scenarios.md  fiu-certification-test-scenarios.md  notes_0004.txt  notes_001.md  notes_002.txt  notes_003.txt  notes_005.txt  notes_pgdb_001.txt  notes_pgdb_002.txt  sahamati.md  sandboxes.md  security.md  status-fip-fiu-aa.csv  unit_test_assets.md
misc/: ecdhe.rs
mock/config/: aa-wap-cfg.json  fip-cfg.json  fip-srv-cfg.json  fip-wap-cfg.json
src/: aa.rs  eco.rs  ets.rs  fiu.rs  main.rs  types.rs
src/aa/: types.rs
src/aa/srv/: aasrv.rs
src/aa/wap/: aawap.rs
src/common/: aa.rs  cfg.rs  choice.rs  deposit.rs  detached.rs  ecdhe.rs  encrypt.rs  err.rs  ets.rs  fip.rs  fiu.rs  hprb.rs  hs.rs  http_server.rs  keystore.rs  lib.rs  logger.rs  mutter.rs  resp.rs  ts.rs  types.rs
src/fip/: consent.txt  cural-aa-fi-fetch-req-ed25519.txt  curl-aa-fi-fetch-req-hs512.txt  curl-aa-wap-fi-req-hs512.txt  curl-fip-acc-delink-ed25519.txt  curl-fip-fi-fetch-req-ed25519.txt  curl-fip-fi-fetch-req-hs512.txt  curl-fip-wap-acc-delink-hs512.txt  curl-fip-wap-acc-discovery-e512-02.txt  curl-fip-wap-acc-discovery-es512-01.txt  curl-fip-wap-acc-discovery-hs256-01.txt  curl-fip-wap-acc-discovery-hs512-02.txt  curl-fip-wap-acc-verifylink-req-ed25519.txt  curl-fip-wap-acc-verifylink-req-hs256.txt  curl-fip-wap-consent-ed25519-09.txt  curl-fip-wap-consent-ed25519-alg-kid.txt  curl-fip-wap-consent-es256-kid-25.txt  curl-fip-wap-consent-es512.txt  curl-fip-wap-consent-hs256_kid_02.txt  curl-fip-wap-consent-hs512_kid_01.txt  curl-fip-wap-fi-req-ed25519.txt  curl-fip-wap-fi-req-es256.txt  curl-fip-wap-fi-req-hs512.txt  curl-fip-wap-link-req-ed25519.txt  curl-fip-wap-link-req-hs512.txt  types.rs
src/fip/srv/: fipsrv.rs
src/fip/wap/: encode.rs  fipwap.rs  tests.rs
src/fiu/srv/: fiusrv.rs
src/fiu/wap/: fiuwap.rs
