[package]
authors = ["Devi Prsaad <dp@web3pleb.org>"]
description = "An implementation of ReBIT Account Aggregator system"
edition = "2021"
name = "sammati"
publish = false
repository = "https://github.com/deviprasad/sammati"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# last updated on 16-august-2023, Thursday
[dependencies]
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.*", features = ["clock", "serde"]}
### chrono feature: "std - interoperation with standard library types and traits."
data-encoding = { version = "2" }
#ed25519-dalek = { version = "2" }
serde = { version = "1", features = ["derive"] }
#url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = [ "v4"] }
#x25519-dalek = { version = "2" }
#zeroize = { version = "1" }

[dev-dependencies]
